--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -1,4 +1,6 @@
-body{
+a:focus, a:hover {
+	color: #ffffff;
+  text-decoration: none;
 }
 
 .slideshow {
@@ -30,6 +32,8 @@ body{
   margin-left: 38px;
   z-index: 1;
   font-weight: 900;
+  letter-spacing: 1px;
+  text-transform: uppercase;
 }
 
 .fa-film{
@@ -71,21 +75,57 @@ body{
   background-color: #e50914;
   box-shadow: 0 1px 0 rgba(0,0,0,.45);
   position: relative;
+  border-radius: 5px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
   z-index: 1;
+  margin: 1em auto;
+  padding: 1em 3em;
   margin-left: 38px;
   cursor: pointer;
+  font-size: 1.2em;
   line-height: 1em;
   display: inline-block;
-  border-radius: 2px;
   text-align: center;
-  text-decoration: none;
   user-select: none;
   box-sizing: border-box;
-  font-weight: 400;
+  font-weight: 700;
   white-space: nowrap;
+  overflow: hidden;
 }
 
-button{
-  overflow: visible;
-  text-transform: none;
+.btn-red,
+.btn-red::after {
+  -webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.btn-red::before,
+.btn-red::after {
+  background: #fff;
+  content: '';
+  position: absolute;
+  z-index: -1;
+}
+
+.btn-red:hover {
+  color: #e50914;
+}
+
+
+.btn-red::after{
+  height: 100%;
+  left: -35%;
+  top: 0;
+  transform: skew(50deg);
+  transition-duration: 0.6s;
+  transform-origin: top left;
+  width: 0;
+}
+
+.btn-red:hover:after {
+  height: 100%;
+  width: 135%;
 }
