--- a/views/toprated/index.ejs
+++ b/views/toprated/index.ejs
@@ -49,7 +49,7 @@
       <div class="col-md-3 col-sm-6">
         <div class="thumbnail">
           <% movie.poster_path = 'https://image.tmdb.org/t/p/w370_and_h556_bestv2' +movie.poster_path %>
-            <a href="/nowplaying/<%= movie.title %>">
+            <a href="/toprated/<%= movie.title %>">
             <img src="<%= movie.poster_path %>">
           </a>
             <div class="caption">
