--- a/views/toprated/show.ejs
+++ b/views/toprated/show.ejs
@@ -4,231 +4,196 @@
     <% Movie.backdrop_path = 'https://image.tmdb.org/t/p/original' +Movie.backdrop_path %>
       <img id="postertest" class="poster" src="<%= Movie.backdrop_path %>">
   </div>
+
+  <!-- Card Container -->
   <div class="col-xs-12 cardcont nopadding">
+    <!-- Meta Container -->
     <div class="meta-data-container col-xs-12 col-md-8 push-md-4 col-lg-7 push-lg-5">
       <h1><%= Movie.original_title %></h1>
       <span class="tagline">
-        <%= Movie.runtime %> min | <%= Movie.genres[0].name %> ,
+        <h2><%= Movie.tagline %></h2>
+        <%= Movie.genres[0].name %> .
           <% if(Movie.genres[1]){ %>
               <%= Movie.genres[1].name %> |
-                <% } else{ %>
+                <% } else { %>
                   <p>NA</p>
                   <% } %>
-                    <%= Movie.release_date %>
-                      (
-                      <%= Movie.spoken_languages[0].name %>
-                      )
+                  <% if(Movie.spoken_languages[0].name) { %>
+                      <%= Movie.spoken_languages[0].name %> |
+                      <% } else { %>
+                        <p>English</p>
+                        <% } %>
+                      <%= Movie.runtime %> mins |
+                      <%= Movie.release_date %>
       </span>
-      <p>
+      <p style='margin-top:6.5vh;'>
+        <h4>
+          SYNOPSIS
+        </h4>
         <%= Movie.overview %>
       </p>
+
+      <!-- additional-details -->
       <div class="additional-details">
         <span class="genre-list"></span>
         <span class="production-list"></span>
         <div class="nopadding release-details">
           <div class="col-xs-6">
-            Original Release:
-            <span class="meta-data">2014-11-05</span>
+            Directed by:
+            <% var obj = Credit.crew.find(o => o.job === 'Director') %>
+              <span class="meta-data"><%= obj.name %></span>
           </div>
           <div class="col-xs-6">
-            Running Time:
-            <span class="meta-data">
-  						169 mins
-  				</span>
+            Produced by:
+            <% if (obj = Credit.crew.find(o => o.job === 'Producer')) { %>
+              <span class="meta-data"><%= obj.name %></span>
+              <% } else { %>
+                <span class="meta-data">NA</span>
+                <% } %>
           </div>
           <div class="col-xs-6">
             Box Office:
-            <span class="meta-data">$675,120,017</span>
+            <span class="meta-data"><%=Movie.revenue %>
+                  </span>
           </div>
           <div class="col-xs-6">
             Vote Average:
-            <span class="meta-data">8.1 / 10</span>
+            <span class="meta-data"><%= Movie.vote_average %> / 10</span>
+          </div>
+          <div class="col-xs-6">
+            <button type="button" class="btn btn-red btn-lg" data-toggle="modal" data-target="#myModal">Watch Trailer</button>
+            <!-- Modal -->
+            <div id="myModal" class="modal fade" role="dialog">
+              <div class="modal-dialog">
+
+                <!-- Modal content-->
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Modal Header</h4>
+                  </div>
+                  <div class="modal-body">
+                    <div class="video-container">
+                      <% if (Video.results[0]) { %>
+                        <div><iframe width="640" height="360" class="youtube" src="https://www.youtube.com/embed/<%= Video.results[0].key %>" allowfullscreen=""></iframe></div>
+                        <% } else { %>
+                          <div><iframe width="640" height="360" class="youtube" src="https://www.youtube.com/" allowfullscreen=""></iframe></div>
+                          <% } %>
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+                <!-- Modal Content -->
+
+
+
+
+              </div>
+            </div>
+            <!-- Modal -->
+          </div>
+          <div class="col-xs-6">
+            <a href="/nowplaying" class="btn-lg btn-green">View More</a>
           </div>
         </div>
       </div>
+      <!-- additional-details -->
+
     </div>
+    <!-- Meta Container -->
     <div class="poster-container nopadding col-xs-12 col-md-4 pull-md-8 col-lg-5 pull-lg-7 ">
       <% Movie.poster_path = 'https://image.tmdb.org/t/p/w500' +Movie.poster_path %>
         <img class="poster" src="<%= Movie.poster_path %>">
     </div>
   </div>
-  <footer>
-    <span><a href="http://www.stephenkempin.co.uk/" rel="author">Designed &amp; developed by Vaibhav</a> </span>
-    <span><a href="https://github.com/SKempin/reactjs-tmdb-app" title="View Github Repo"><i class="icon ion-social-github"></i>View Code</a></span>
-  </footer>
+  <!-- Card Container -->
 
-  <!-- <div class="container" id="content"> -->
-  <!-- <div class="movie-video"> -->
-  <!-- movie video will render here -->
-  <!-- <div><iframe class="youtube" src="https://www.youtube.com/embed/<%= Video.results[0].key %>" allowfullscreen=""></iframe></div> -->
-  <!-- </div> -->
-
-  <!-- <div id="movie-main-summary">
-      <div id="summary-top">
-        <div class="col-lg-8 col-md-8 col-sm-5 col-xs-1 color ">
-          <span id="movie-summary-title"><%= Movie.original_title %></span>
-          <div class="caption_info">
-            <%= Movie.runtime %> |
-              <%= Movie.genres[0].name %> ,
-                <% if(Movie.genres[1]){ %>
-                  <%= Movie.genres[1].name %> |
-                    <% } else{ %>
-                      <h1>NA</h1>
-                      <% } %>
-                        <%= Movie.release_date %>
-                          (
-                          <%= Movie.spoken_languages[0].name %>)
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-2 col-xs-1 color">
-          <div class="rating">
-            <span>
-            <i class="fa fa-star"></i>
-            <div class="star">
-              <span><strong id="vote_avg"><%= Movie.vote_average %></strong> / 10</span>
-          </div>
-          <div class="vote">
-            <%= Movie.vote_count %>
-          </div>
-          </span>
-        </div>
-      </div>
-    </div>
-    <hr>
-    <div id="summary-bottom">
-      <div class="col-lg-5">
-        <% Movie.poster_path = 'https://image.tmdb.org/t/p/w185_and_h278_bestv2' +Movie.poster_path %>
-          <img class="img-responsive" src="<%= Movie.poster_path %>" id="movie-summary-img"><br>
-      </div>
-      <div class="col-lg-7">
-        <p>
-          <%= Movie.overview %>
-        </p>
-        <br>
-        <div class="col-lg-12">
-          <% var obj = Credit.crew.find(o => o.job === 'Director') %>
-            <div class="credit-item">
-              <h4 class="inline">Director:</h4>
-              <span><%= obj.name %></span>
+  <!-- Cast Description -->
+  <div class="col-xs-12 cardcont nopadding">
+    <div class="wrapper">
+      <h3>STARRING</h3>
+      <div style="margin-top:50px;" class="row row-flex">
+        <%
+          var cast = Credit.cast.slice(1, 9)
+          for(var i = 0; i < cast.length; i++) {
+        %>
+          <div class="col-md-3">
+            <div class="responsive-circle">
+              <% var obj = Credit.cast[i].profile_path %>
+                <% var Poster_Path = 'https://image.tmdb.org/t/p/w500' +obj %>
+                  <div>
+                    <img src="<%= Poster_Path %>" class="image--cover">
+                    <figcaption>
+                      <%= Credit.cast[i].name %>
+                    </figcaption>
+                  </div>
             </div>
-        </div>
-        <div class="col-lg-12">
-          <% var obj1 = Credit.crew.find(o => o.job === 'Screenplay') %>
-            <div class="credit-item">
-              <h4 class="inline">Writers:</h4>
-              <span>
-                <% if(obj1) { %>
-                <%= obj1.name %>
-                <% } else { %>
-                <h1>NA</h1>
-                <% } %>
-              </span>
-            </div>
-        </div>
-        <div class="col-lg-12">
-          <div class="credit-item">
-            <h4 class="inline">Stars:</h4>
-            <span><%= Credit.cast[0].name %> , <%= Credit.cast[1].name %> , <%= Credit.cast[2].name %> , <%= Credit.cast[3].name %></span>
           </div>
+          <% } %>
+      </div>
+    </div>
+  </div>
+
+  <!-- Recommendations -->
+  <div class="col-xs-12 cardcont nopadding">
+    <div class="wrapper">
+      <h3>People who liked this also liked...</h3>
+      <div class="container">
+        <div class="row row-flex fivecolumns">
+          <%
+            var reco = Recommend.results.slice(1, 12)
+            for(var i = 0; i < reco.length; i++) {
+          %>
+            <div class="span2">
+              <% Recommend.results[i].poster_path = 'https://image.tmdb.org/t/p/w500' +Recommend.results[i].poster_path %>
+                <img class="img-responsive" src="<%= Recommend.results[i].poster_path %>" id="movie-summary-img"><br>
+                <figcaption>
+                  <%= Recommend.results[i].title %>
+                </figcaption>
+            </div>
+            <% } %>
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
 
-  <!-- </div> -->
-
-  <!-- <div class="container" id="recommendations">
-    <h2 class="rec_heading">People who liked this also liked... </h2>
-    <div class="col-lg-2">
-      <% Recommend.results[0].poster_path = 'https://image.tmdb.org/t/p/w500' +Recommend.results[0].poster_path %>
-        <img class="img-responsive" src="<%= Recommend.results[0].poster_path %>" id="movie-summary-img"><br>
-        <div class="caption">
-          <%= Recommend.results[0].title %>
-        </div>
+  <!-- Slider -->
+  <div class="col-xs-12 cardcont nopadding">
+    <div class="wrapper slick-slider">
+      <h3>Currently Playing</h3>
+      <div class="slider">
+        <% currRated.results[0].poster_path = 'https://image.tmdb.org/t/p/w500' +currRated.results[0].poster_path %>
+          <div><img src="<%= currRated.results[0].poster_path %>" alt="" class="img-responsive" id="movie-summary-img"></div>
+          <% currRated.results[1].poster_path = 'https://image.tmdb.org/t/p/w500' +currRated.results[1].poster_path %>
+            <div><img src="<%= currRated.results[1].poster_path %>" alt="" class="img-responsive" id="movie-summary-img"></div>
+            <% currRated.results[2].poster_path = 'https://image.tmdb.org/t/p/w500' +currRated.results[2].poster_path %>
+              <div><img src="<%= currRated.results[2].poster_path %>" alt="" class="img-responsive" id="movie-summary-img"></div>
+              <% currRated.results[3].poster_path = 'https://image.tmdb.org/t/p/w500' +currRated.results[3].poster_path %>
+                <div><img src="<%= currRated.results[3].poster_path %>" alt="" class="img-responsive" id="movie-summary-img"></div>
+                <% currRated.results[4].poster_path = 'https://image.tmdb.org/t/p/w500' +currRated.results[4].poster_path %>
+                  <div><img src="<%= currRated.results[4].poster_path %>" alt="" class="img-responsive" id="movie-summary-img"></div>
+                  <% currRated.results[5].poster_path = 'https://image.tmdb.org/t/p/w500' +currRated.results[5].poster_path %>
+                    <div><img src="<%= currRated.results[5].poster_path %>" alt="" class="img-responsive" id="movie-summary-img"></div>
+                    <% currRated.results[6].poster_path = 'https://image.tmdb.org/t/p/w500' +currRated.results[6].poster_path %>
+                      <div><img src="<%= currRated.results[6].poster_path %>" alt="" class="img-responsive" id="movie-summary-img"></div>
+                      <% currRated.results[7].poster_path = 'https://image.tmdb.org/t/p/w500' +currRated.results[7].poster_path %>
+                        <div><img src="<%= currRated.results[7].poster_path %>" alt="" class="img-responsive" id="movie-summary-img"></div>
+                        <% currRated.results[8].poster_path = 'https://image.tmdb.org/t/p/w500' +currRated.results[8].poster_path %>
+                          <div><img src="<%= currRated.results[8].poster_path %>" alt="" class="img-responsive" id="movie-summary-img"></div>
+      </div>
     </div>
-
-    <div class="col-lg-2">
-      <% if(Recommend.results[1]){ %>
-        <% Recommend.results[1].poster_path = 'https://image.tmdb.org/t/p/w500' +Recommend.results[1].poster_path %>
-          <img class="img-responsive" src="<%= Recommend.results[1].poster_path %>" id="movie-summary-img"><br>
-          <div class="caption">
-            <%= Recommend.results[1].title %>
-          </div>
-          <% } else{ %>
-            <h1>NA</h1>
-            <% } %>
-    </div>
-    <div class="col-lg-2">
-      <% if(Recommend.results[2]){ %>
-        <% Recommend.results[2].poster_path = 'https://image.tmdb.org/t/p/w500' +Recommend.results[2].poster_path %>
-          <img class="img-responsive" src="<%= Recommend.results[2].poster_path %>" id="movie-summary-img"><br>
-          <div class="caption">
-            <%= Recommend.results[2].title %>
-          </div>
-          <% } else{ %>
-            <h1>NA</h1>
-            <% } %>
-    </div>
-
-    <div class="col-lg-2">
-      <% if(Recommend.results[3]){ %>
-        <% Recommend.results[3].poster_path = 'https://image.tmdb.org/t/p/w500' +Recommend.results[3].poster_path %>
-          <img class="img-responsive" src="<%= Recommend.results[3].poster_path %>" id="movie-summary-img"><br>
-          <div class="caption">
-            <%= Recommend.results[3].title %>
-          </div>
-          <% } else{ %>
-            <h1>NA</h1>
-            <% } %>
-    </div>
-
-    <div class="col-lg-2">
-      <% if(Recommend.results[4]){ %>
-        <% Recommend.results[4].poster_path = 'https://image.tmdb.org/t/p/w500' +Recommend.results[4].poster_path %>
-          <img class="img-responsive" src="<%= Recommend.results[4].poster_path %>" id="movie-summary-img"><br>
-          <div class="caption">
-            <%= Recommend.results[4].title %>
-          </div>
-          <% } else{ %>
-            <h1>NA</h1>
-            <% } %>
-    </div>
-
-    <div class="col-lg-2">
-      <% if(Recommend.results[5]){ %>
-        <% Recommend.results[5].poster_path = 'https://image.tmdb.org/t/p/w500' +Recommend.results[5].poster_path %>
-          <img class="img-responsive" src="<%= Recommend.results[5].poster_path %>" id="movie-summary-img"><br>
-          <div class="caption">
-            <%= Recommend.results[5].title %>
-          </div>
-    </div>
-    <% } else{ %>
-      <h1>NA</h1>
-      <% } %>
   </div>
 
 
-  <div class="container" id="slick-slider">
-    <div class="slider">
-      <% currPlaying.results[0].poster_path = 'https://image.tmdb.org/t/p/w500' +currPlaying.results[0].poster_path %>
-        <div><img src="<%= currPlaying.results[0].poster_path %>" alt="" class="img-responsive" id="movie-summary-img"></div>
-        <% currPlaying.results[1].poster_path = 'https://image.tmdb.org/t/p/w500' +currPlaying.results[1].poster_path %>
-          <div><img src="<%= currPlaying.results[1].poster_path %>" alt="" class="img-responsive" id="movie-summary-img"></div>
-          <% currPlaying.results[2].poster_path = 'https://image.tmdb.org/t/p/w500' +currPlaying.results[2].poster_path %>
-            <div><img src="<%= currPlaying.results[2].poster_path %>" alt="" class="img-responsive" id="movie-summary-img"></div>
-            <% currPlaying.results[3].poster_path = 'https://image.tmdb.org/t/p/w500' +currPlaying.results[3].poster_path %>
-              <div><img src="<%= currPlaying.results[3].poster_path %>" alt="" class="img-responsive" id="movie-summary-img"></div>
-              <% currPlaying.results[4].poster_path = 'https://image.tmdb.org/t/p/w500' +currPlaying.results[4].poster_path %>
-                <div><img src="<%= currPlaying.results[4].poster_path %>" alt="" class="img-responsive" id="movie-summary-img"></div>
-                <% currPlaying.results[5].poster_path = 'https://image.tmdb.org/t/p/w500' +currPlaying.results[5].poster_path %>
-                  <div><img src="<%= currPlaying.results[5].poster_path %>" alt="" class="img-responsive" id="movie-summary-img"></div>
-                  <% currPlaying.results[6].poster_path = 'https://image.tmdb.org/t/p/w500' +currPlaying.results[6].poster_path %>
-                    <div><img src="<%= currPlaying.results[6].poster_path %>" alt="" class="img-responsive" id="movie-summary-img"></div>
-                    <% currPlaying.results[7].poster_path = 'https://image.tmdb.org/t/p/w500' +currPlaying.results[7].poster_path %>
-                      <div><img src="<%= currPlaying.results[7].poster_path %>" alt="" class="img-responsive" id="movie-summary-img"></div>
-                      <% currPlaying.results[8].poster_path = 'https://image.tmdb.org/t/p/w500' +currPlaying.results[8].poster_path %>
-                        <div><img src="<%= currPlaying.results[8].poster_path %>" alt="" class="img-responsive" id="movie-summary-img"></div>
-    </div> -->
-  <!-- </div> -->
+
+  <!-- Footer -->
+  <div class="col-xs-12 cardcont nopadding">
+    <footer>
+      <span><a href="http://www.stephenkempin.co.uk/" rel="author">Designed &amp; developed by Vaibhav</a> </span>
+      <span><a href="https://github.com/SKempin/reactjs-tmdb-app" title="View Github Repo"><i class="icon ion-social-github"></i>View Code</a></span>
+    </footer>
+  </div>
 
   <% include ../partials/footer %>
