Add Google adsense

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,10 +1,18 @@
 <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script defer type="text/javascript" src="/stylesheets/js/script.js"></script>
 <script defer src="/stylesheets/js/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-<script defer type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.min.js"></script>
+<script defer type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.min.js"></script>
 <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/regular.js"></script>
 <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/fontawesome.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-5357926148681370",
+        enable_page_level_ads: true
+    });
+</script>
 <!-- IntersectionObserver polyfill -->
 <script src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver"></script>
 <!-- Lozad.js from CDN -->
