add google adsense in header

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,6 +13,13 @@
   <link rel="stylesheet" type="text/css" href="http://kenwheeler.github.io/slick/slick/slick-theme.css">
   <link rel="stylesheet" href="/stylesheets/main.css">
   <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600" rel="stylesheet">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-5357926148681370",
+      enable_page_level_ads: true
+    });
+  </script>
 </head>
 
 <body>
