--- a/views/upcoming/show.ejs
+++ b/views/upcoming/show.ejs
@@ -191,8 +191,8 @@
   <!-- Footer -->
   <div class="col-xs-12 cardcont nopadding">
     <footer>
-      <span><a href="http://www.stephenkempin.co.uk/" rel="author">Designed &amp; developed by Vaibhav</a> </span>
-      <span><a href="https://github.com/SKempin/reactjs-tmdb-app" title="View Github Repo"><i class="icon ion-social-github"></i>View Code</a></span>
+      <span><a href="" rel="author">Designed &amp; developed by Vaibhav</a> </span>
+      <span><a href="https://github.com/vaibhavpacharya/node-popCorn" title="View Github Repo"><span class="iconify" data-icon="ion:logo-github" data-inline="false"></span> View Code </a></span>
     </footer>
   </div>
 
